# jmsd_tpa_poco

./: CMakeLists.txt  README.md
_cmake_settings/: jmsd-c-derived-set-compiler-settings.cmake  tpa-poco-cppunit-adapter-set-compiler-settings.cmake  tpa-poco-cppunit-set-compiler-settings.cmake  tpa-poco-test-lib-old-set-compiler-settings.cmake  tpa-poco-tests-set-compiler-settings.cmake
_cmake_settings/compiler-settings/: tpa-poco-cppunit-adapter-set-linux-compiler-settings.cmake  tpa-poco-cppunit-adapter-set-windows-compiler-settings.cmake  tpa-poco-cppunit-set-linux-compiler-settings.cmake  tpa-poco-test-lib-old-set-linux-compiler-settings.cmake  tpa-poco-test-lib-set-linux-compiler-settings.cmake  tpa-poco-test-lib-set-windows-compiler-settings.cmake
jmsd_c_derived_lib/: CMakeLists.txt
sources/jmsd_c_derived/: jmsd_c_derived.h  jmsd_c_derived_class.cpp  jmsd_c_derived_class.h  jmsd_c_derived_shared_library_support.h
sources/tpa_poco_cppunit/jmsd/tpa/poco/: tpa_poco_cppunit.h  tpa_poco_cppunit_main.cpp  tpa_poco_cppunit_main.h  tpa_poco_cppunit_sls.h
sources/tpa_poco_cppunit_adapter/: pcu_adapter.h  pcu_adapter_sls.h  tpa_poco_cppunit_adapter.h
sources/tpa_poco_cppunit_adapter/Poco/CppUnit/: CppUnit.cpp  CppUnit.h  TestCaller.cpp  TestCaller.h  TestCase.h  TestSuite.h  assertion_adapter.cpp  assertion_adapter.h  test_addition_adapter.cpp  test_addition_adapter.h
sources/tpa_poco_cppunit_adapter/jmsd/tpa/poco/: tpa_poco_cppunit_adapter_main.cpp  tpa_poco_cppunit_adapter_main.h
sources/tpa_poco_test/jmsd/tpa/poco/: tpa_poco_test_main.cpp  tpa_poco_test_main.h  tpa_poco_test_sls.h
sources/tpa_poco_test_old/jmsd/tpa/poco/: tpa_poco_test.h  tpa_poco_test_main.cpp
sources/tpa_poco_tests/: tpa_poco_tests_main_entry.cpp
tpa_poco_cppunit/: CMakeLists.txt
tpa_poco_cppunit_adapter/: CMakeLists.txt
tpa_poco_test_lib/: CMakeLists.txt
tpa_poco_test_lib_old/: CMakeLists.txt
tpa_poco_tests/: CMakeLists.txt
